--- a/lib/dune
+++ b/lib/dune
@@ -1,3 +1,3 @@
 (library
  (name builder_web)
- (libraries builder opium tyxml bos rresult duration hex))
+ (libraries builder builder_db opium tyxml bos rresult duration hex caqti-lwt))
