--- a/bin/dune
+++ b/bin/dune
@@ -2,10 +2,10 @@
  (public_name builder_web)
  (name builder_web_app)
  (modules builder_web_app)
- (libraries builder_web))
+ (libraries builder_web mirage-crypto-rng.unix))
 
 (executable
  (public_name builder-db)
  (name builder_db)
  (modules builder_db)
- (libraries builder_db caqti.blocking uri bos fmt logs logs.cli logs.fmt cmdliner))
+ (libraries builder_db caqti.blocking uri bos fmt logs logs.cli logs.fmt cmdliner mirage-crypto-rng.unix))
