Use dash instead of underscore in binary name

--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,5 @@
 (executable
- (public_name builder_web)
+ (public_name builder-web)
  (name builder_web_app)
  (modules builder_web_app)
  (libraries builder_web mirage-crypto-rng.unix))
