Add opam dependencies

--- a/builder-web.opam
+++ b/builder-web.opam
@@ -25,6 +25,8 @@ depends: [
   "sexplib"
   "scrypt-kdf"
   "alcotest" {with-test}
+  "opam-core"
+  "opam-format"
 ]
 
 synopsis: "Web interface for builder"
