--- a/auth/dune
+++ b/auth/dune
@@ -1,3 +1,3 @@
 (library
  (name builder_web_auth)
- (libraries pbkdf mirage-crypto-rng sexplib))
+ (libraries pbkdf scrypt-kdf mirage-crypto-rng sexplib))
