Add Builder_db.User tests

--- a/builder-web.opam
+++ b/builder-web.opam
@@ -23,6 +23,7 @@ depends: [
   "mirage-crypto-rng"
   "sexplib"
   "scrypt-kdf"
+  "alcotest" {with-test}
 ]
 
 synopsis: "Web interface for builder"
