Add runtest to opam

--- a/builder-web.opam
+++ b/builder-web.opam
@@ -9,6 +9,7 @@ license: "ISC"
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
+  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
 
 depends: [
