--- a/builder-web.opam
+++ b/builder-web.opam
@@ -11,6 +11,7 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
   ["sh" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
+  ["sh" "packaging/debian/create_package.sh"] {os-family = "debian"}
 ]
 
 depends: [
