--- a/lib/dune
+++ b/lib/dune
@@ -1,3 +1,7 @@
 (library
  (name builder_web)
  (libraries builder builder_db dream tyxml bos rresult duration hex caqti-lwt opamdiff ptime.clock.os omd))
+
+(env
+ (dev
+  (flags (:standard -w -27))))
