--- a/packaging/debian/builder-web.service
+++ b/packaging/debian/builder-web.service
@@ -6,7 +6,7 @@ After=syslog.target network.target
 Type=simple
 User=builder
 Group=builder
-ExecStart=/usr/bin/builder-web --datadir /var/lib/builder-web/
+ExecStart=/usr/bin/builder-web
 
 [Install]
 WantedBy=multi-user.target
