opam: require opam-format 2.1.0 (for OpamPackage.Name.equal)

--- a/builder-web.opam
+++ b/builder-web.opam
@@ -30,7 +30,7 @@ depends: [
   "scrypt-kdf"
   "alcotest" {with-test}
   "opam-core"
-  "opam-format"
+  "opam-format" {>= "2.1.0"}
   "metrics"
   "metrics-lwt"
   "metrics-influx"
