--- a/builder-web.opam
+++ b/builder-web.opam
@@ -36,7 +36,7 @@ depends: [
   "metrics-influx"
   "metrics-rusage"
   "ipaddr"
-  "tyxml"
+  "tyxml" {>= "4.0.0"}
   "ptime"
   "duration"
   "mirage-crypto"
