opam: require metrics 0.3.0 and above

--- a/builder-web.opam
+++ b/builder-web.opam
@@ -32,10 +32,10 @@ depends: [
   "alcotest" {with-test}
   "opam-core"
   "opam-format" {>= "2.1.0"}
-  "metrics"
-  "metrics-lwt"
-  "metrics-influx"
-  "metrics-rusage"
+  "metrics" {>= "0.3.0"}
+  "metrics-lwt" {>= "0.3.0"}
+  "metrics-influx" {>= "0.3.0"}
+  "metrics-rusage" {>= "0.3.0"}
   "ipaddr"
   "tyxml" {>= "4.3.0"}
   "ptime"
