Rename Builder_db modules in bin/ and test/
They both depend on the Builder_db module in db/, and using the same
name confuses Merlin (as well as myself sometimes).

--- a/bin/dune
+++ b/bin/dune
@@ -11,6 +11,6 @@
 
 (executable
  (public_name builder-db)
- (name builder_db)
- (modules builder_db)
+ (name builder_db_app)
+ (modules builder_db_app)
  (libraries builder_db builder_system caqti.blocking uri bos fmt logs logs.cli logs.fmt cmdliner mirage-crypto-rng.unix))
