--- a/builder-web.opam
+++ b/builder-web.opam
@@ -62,5 +62,6 @@ Produced binaries can be downloaded and executed.
 """
 
 pin-depends: [
+  ["modulectomy.dev" "git+https://github.com/roburio/modulectomy.git"]
   ["opam-graph.dev" "git+https://git.robur.io/robur/opam-graph.git"]
 ]
