--- a/builder-web.opam
+++ b/builder-web.opam
@@ -45,7 +45,7 @@ depends: [
   "cmdliner" {>= "1.1.0"}
   "uri"
   "fmt" {>= "0.8.7"}
-  "omd"
+  "omd" {>= "2.0.0~alpha3"}
   "tar"
   "owee"
   "solo5-elftool" {>= "0.3.0"}
