Fix build of builder-web with more recent packages:
Cstruct.copy is deprecated
Mirage_crypto_rng_unix.initialize requires the RNG module as paramater (since mirage-crypto-rng 0.11.0)
Lwt_result.catch takes a function (unit -> 'a Lwt.t) since lwt 5.7.0

--- a/builder-web.opam
+++ b/builder-web.opam
@@ -22,12 +22,12 @@ depends: [
   "cstruct" {>= "6.0.0"}
   "bos"
   "hex"
-  "lwt" {>= "5.6.0"}
+  "lwt" {>= "5.7.0"}
   "caqti" {>= "1.8.0"}
   "caqti-lwt"
   "caqti-driver-sqlite3"
   "pbkdf"
-  "mirage-crypto-rng"
+  "mirage-crypto-rng" {>= "0.11.0"}
   "scrypt-kdf"
   "opam-core"
   "opam-format" {>= "2.1.0"}
