--- a/bin/dune
+++ b/bin/dune
@@ -7,10 +7,13 @@
  (public_name builder-web)
  (name builder_web_app)
  (modules builder_web_app)
- (libraries builder_web builder_system mirage-crypto-rng.unix cmdliner logs.cli metrics metrics-lwt metrics-influx metrics-rusage ipaddr ipaddr.unix http_status_metrics))
+ (libraries builder_web builder_system mirage-crypto-rng.unix cmdliner
+   logs.cli metrics metrics-lwt metrics-influx metrics-rusage ipaddr
+   ipaddr.unix http_status_metrics))
 
 (executable
  (public_name builder-db)
  (name builder_db_app)
  (modules builder_db_app)
- (libraries builder_web builder_db builder_system caqti.blocking uri bos fmt logs logs.cli logs.fmt cmdliner mirage-crypto-rng.unix builder))
+ (libraries builder_web builder_db builder_system caqti.blocking uri bos fmt
+   logs logs.cli logs.fmt cmdliner mirage-crypto-rng.unix builder))
