--- a/bin/migrations/dune
+++ b/bin/migrations/dune
@@ -1,4 +1,5 @@
 (executable
  (public_name builder-migrations)
  (name builder_migrations)
- (libraries builder_system builder_db caqti caqti-driver-sqlite3 caqti.blocking cmdliner logs logs.cli logs.fmt opam-format bos duration))
+ (libraries builder_system builder_db caqti caqti-driver-sqlite3
+   caqti.blocking cmdliner logs logs.cli logs.fmt opam-format bos duration))
