--- a/db/dune
+++ b/db/dune
@@ -1,3 +1,4 @@
 (library
  (name builder_db)
- (libraries builder caqti caqti-driver-sqlite3 asn1-combinators mirage-crypto builder_web_auth))
+ (libraries builder caqti caqti-driver-sqlite3 asn1-combinators mirage-crypto
+   builder_web_auth))
