--- a/builder-web.opam
+++ b/builder-web.opam
@@ -53,6 +53,7 @@ depends: [
   "alcotest" {with-test}
   "ppx_deriving" {with-test}
   "ppx_deriving_yojson" {with-test}
+  "yojson" {with-test}
 ]
 
 synopsis: "Web interface for builder"
