--- a/builder-web.opam
+++ b/builder-web.opam
@@ -49,6 +49,7 @@ depends: [
   "solo5-elftool" {>= "0.3.0"}
   "decompress" {>= "1.5.0"}
   "digestif" {>= "1.2.0"}
+  "uuidm" {>= "0.9.9"}
   "alcotest" {>= "1.2.0" & with-test}
   "ppx_deriving" {with-test}
   "ppx_deriving_yojson" {with-test}
