--- a/bin/dune
+++ b/bin/dune
@@ -7,9 +7,9 @@
  (public_name builder-web)
  (name builder_web_app)
  (modules builder_web_app)
- (libraries builder_web builder_system mirage-crypto-rng.unix cmdliner
-   logs.cli metrics metrics-lwt metrics-influx metrics-rusage ipaddr
-   ipaddr.unix http_status_metrics))
+ (libraries builder_web builder_system dream dream-encoding
+   mirage-crypto-rng.unix cmdliner logs.cli metrics metrics-lwt metrics-influx
+   metrics-rusage ipaddr ipaddr.unix http_status_metrics))
 
 (executable
  (public_name builder-db)
