Work around dream-encoding footgun
Dream-encoding adds a Transfer-Encoding header to a response. If that
response is an error code it will go through the error handler which may
change the response - but the new response *does not* go through the
dream-encoding middleware! This means we may rewrite the response with a
plaintext message but still have the Transfer-Encoding header! This
makes clients very unhappy.

--- a/lib/dune
+++ b/lib/dune
@@ -2,4 +2,4 @@
  (name builder_web)
  (libraries builder builder_db dream tyxml bos duration ohex caqti-lwt
    opamdiff ptime.clock.os cmarkit tar tar.gz tar-unix owee solo5-elftool decompress.de
-   decompress.gz uri digestif))
+   decompress.gz uri digestif dream-encoding))
