--- a/builder-web.opam
+++ b/builder-web.opam
@@ -47,7 +47,7 @@ depends: [
   "tar" {>= "3.0.0"}
   "tar-unix" {>= "3.0.0"}
   "owee"
-  "solo5-elftool" {>= "0.3.0"}
+  "solo5-elftool" {>= "0.3.0" & < "0.4.0"}
   "decompress" {>= "1.5.0"}
   "digestif" {>= "1.2.0"}
   "uuidm" {>= "0.9.9"}
