--- a/builder-web.opam
+++ b/builder-web.opam
@@ -46,7 +46,7 @@ depends: [
   "cmarkit" {>= "0.3.0"}
   "tar" {>= "3.0.0"}
   "tar-unix" {>= "3.0.0"}
-  "cachet"
+  "cachet" {>= "0.2.0"}
   "solo5-elftool" {>= "0.4.0"}
   "decompress" {>= "1.5.0"}
   "digestif" {>= "1.2.0"}
