Implement more endpoints \o/

--- a/lib-miou/dune
+++ b/lib-miou/dune
@@ -2,4 +2,4 @@
  (name builder_miou)
  (libraries builder builder_db vif tyxml bos duration ohex caqti-miou
    caqti-miou.unix opamdiff ptime.clock.os cmarkit tar tar.gz tar-unix owee
-   solo5-elftool decompress.de decompress.gz uri digestif))
+   solo5-elftool decompress.de decompress.gz uri digestif magic-mime))
