--- a/bin/dune
+++ b/bin/dune
@@ -4,14 +4,6 @@
  (libraries bos))
 
 (executable
- (public_name builder-web)
- (name builder_web_app)
- (modules builder_web_app)
- (libraries builder_web builder_system dream dream-encoding
-   mirage-crypto-rng.unix cmdliner logs.cli metrics metrics-lwt metrics-influx
-   metrics-rusage ipaddr ipaddr.unix http_status_metrics))
-
-(executable
  (public_name builder-db)
  (name builder_db_app)
  (modules builder_db_app)
@@ -19,8 +11,8 @@
    logs logs.cli logs.fmt cmdliner mirage-crypto-rng.unix builder))
 
 (executable
- (public_name builder-miou)
- (name builder_miou_app)
- (modules builder_miou_app)
- (libraries builder_miou builder_db builder_system mirage-crypto-rng-miou-unix
+ (public_name builder-web)
+ (name builder_web_app)
+ (modules builder_web_app)
+ (libraries builder_web builder_db builder_system mirage-crypto-rng-miou-unix
    fmt logs logs.cli fmt.cli logs.fmt logs.threaded fmt.tty cmdliner mirage-logs.cli caqti-miou.unix))
