--- a/builder-web.opam
+++ b/builder-web.opam
@@ -18,44 +18,38 @@ depends: [
   "ocaml" {>= "4.13.0"}
   "dune" {>= "2.7.0"}
   "builder" {>= "0.4.0"}
-  "dream" {>= "1.0.0~alpha7"}
-  "dream-encoding"
+  "vif"
   "bos"
   "ohex" {>= "0.2.0"}
-  "lwt" {>= "5.7.0"}
   "caqti" {>= "2.1.2"}
-  "caqti-lwt"
+  "caqti-miou"
   "caqti-driver-sqlite3"
   "mirage-crypto-rng" {>= "1.2.0"}
   "kdf"
   "opam-core"
   "opam-format" {>= "2.1.0"}
-  "metrics" {>= "0.5.0"}
-  "metrics-lwt" {>= "0.3.0"}
-  "metrics-influx" {>= "0.3.0"}
-  "metrics-rusage" {>= "0.3.0"}
-  "ipaddr"
   "tyxml" {>= "4.3.0"}
   "ptime"
   "duration"
   "asn1-combinators" {>= "0.3.0"}
   "logs"
   "cmdliner" {>= "1.1.0"}
+  "mirage-logs"
   "uri"
   "fmt" {>= "0.8.7"}
   "cmarkit" {>= "0.3.0"}
-  "tar" {>= "3.3.0"}
-  "tar-unix" {>= "3.0.0"}
   "cachet" {>= "0.0.2"}
   "solo5-elftool" {>= "0.4.0"}
-  "decompress" {>= "1.5.0"}
+  "owee"
   "digestif" {>= "1.2.0"}
   "uuidm" {>= "0.9.9"}
   "yojson"
+  "magic-mime"
   "alcotest" {>= "1.2.0" & with-test}
   "ppx_deriving" {with-test}
   "ppx_deriving_yojson" {with-test}
 ]
+pin-depends: ["vif.dev" "git+https://git.robur.coop/robur/vif.git#master"]
 
 synopsis: "Web interface for builder"
 description: """
