--- a/lib/dune
+++ b/lib/dune
@@ -2,4 +2,4 @@
  (name builder_web)
  (libraries builder builder_db viz vif tyxml bos duration ohex caqti-miou
    caqti-miou.unix opamdiff ptime.clock.os cmarkit owee
-   solo5-elftool decompress.de decompress.gz uri digestif magic-mime))
+   solo5-elftool decompress.de decompress.gz uri digestif magic-mime url))
